[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Ship/Harpoon/Harpoon_Wheel.png" type="Texture" id=1]
[ext_resource path="res://Assets/Ship/Harpoon/Harpoon_Reel.png" type="Texture" id=2]
[ext_resource path="res://Assets/PrototypingPack/Line.png" type="Texture" id=3]
[ext_resource path="res://Assets/Ship/Harpoon/Harpoon_Wheel_Target.png" type="Texture" id=4]
[ext_resource path="res://Assets/Ship/Harpoon/Harpoon_Case.png" type="Texture" id=5]
[ext_resource path="res://Fishing/Crane.gd" type="Script" id=6]
[ext_resource path="res://Fishing/Reeling/Reel.gd" type="Script" id=7]
[ext_resource path="res://Assets/Ship/Harpoon/Harpoon_Base.png" type="Texture" id=8]
[ext_resource path="res://Assets/Ship/Harpoon/Harpoon_Hook.png" type="Texture" id=9]
[ext_resource path="res://Assets/Ship/Harpoon/Harpoon_Wheel_Pointer.png" type="Texture" id=10]
[ext_resource path="res://Fishing/Storage/Stacks/GreenFishStack.tscn" type="PackedScene" id=11]
[ext_resource path="res://Fishing/Storage/Stacks/BlueFishStack.tscn" type="PackedScene" id=12]
[ext_resource path="res://Fishing/Storage/Stacks/PurpleFishStack.tscn" type="PackedScene" id=13]
[ext_resource path="res://Fishing/Storage/Stacks/GoldFishStack.tscn" type="PackedScene" id=14]
[ext_resource path="res://Fishing/Storage/Stacks/RedFishStack.tscn" type="PackedScene" id=15]
[ext_resource path="res://Fishing/FishAttach.tscn" type="PackedScene" id=16]
[ext_resource path="res://Audio/SFX/Winch_Loop.wav" type="AudioStream" id=17]
[ext_resource path="res://Audio/SFX/HarpoonHit_Dull-002.wav" type="AudioStream" id=18]
[ext_resource path="res://Audio/SFX/HarpoonHit_Chime-002.wav" type="AudioStream" id=19]

[node name="Crane" type="Node2D"]
position = Vector2( 426, 328 )
script = ExtResource( 6 )
fish = {
"Blue": ExtResource( 12 ),
"Gold": ExtResource( 14 ),
"Green": ExtResource( 11 ),
"Purple": ExtResource( 13 ),
"Red": ExtResource( 15 )
}

[node name="Hook" type="Node2D" parent="."]

[node name="Rotater" type="Node2D" parent="Hook"]
position = Vector2( 64, -6 )

[node name="HookBase" type="Node2D" parent="Hook/Rotater"]
position = Vector2( 46.8, -0.200012 )

[node name="Line" type="Sprite" parent="Hook/Rotater/HookBase"]
modulate = Color( 0, 1, 0.882353, 1 )
position = Vector2( 0, -0.799988 )
rotation = 1.5708
scale = Vector2( 0.2, 1e-05 )
texture = ExtResource( 3 )

[node name="Hook" type="Node2D" parent="Hook/Rotater/HookBase"]

[node name="Hook" type="Sprite" parent="Hook/Rotater/HookBase/Hook"]
position = Vector2( 28.2, -0.800049 )
rotation = -0.015708
scale = Vector2( 0.15, 0.1 )
texture = ExtResource( 9 )

[node name="FishAttach" parent="Hook/Rotater/HookBase/Hook" instance=ExtResource( 16 )]
position = Vector2( 76, -1 )
rotation = 1.5708
fish = {
"Blue": ExtResource( 12 ),
"Gold": ExtResource( 14 ),
"Green": ExtResource( 11 ),
"Purple": ExtResource( 13 ),
"Red": ExtResource( 15 )
}

[node name="Arm" type="Sprite" parent="Hook/Rotater"]
modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
position = Vector2( 46.8, -1.19995 )
rotation = -0.0174533
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="Base" type="Sprite" parent="Hook"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
position = Vector2( 63, 35 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="Reel" type="Node2D" parent="."]
position = Vector2( -114, 121 )
z_index = 10
script = ExtResource( 7 )

[node name="Winching" type="AudioStreamPlayer2D" parent="Reel"]
stream = ExtResource( 17 )
volume_db = -5.0

[node name="Winch_Success" type="AudioStreamPlayer2D" parent="Reel"]
position = Vector2( 224.8, -127.2 )
stream = ExtResource( 19 )

[node name="Winch_Failure" type="AudioStreamPlayer2D" parent="Reel"]
position = Vector2( 224.8, -127.2 )
stream = ExtResource( 18 )

[node name="Line" type="Sprite" parent="Reel"]
modulate = Color( 0, 1, 0.882353, 1 )
position = Vector2( 74, -89 )
scale = Vector2( 0.26, 0.23 )
texture = ExtResource( 2 )

[node name="Wheel" type="Node2D" parent="Reel"]

[node name="Wheel" type="Sprite" parent="Reel/Wheel"]
rotation = 3.90954
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Pointer" type="Sprite" parent="Reel/Wheel"]
modulate = Color( 0.686275, 0.686275, 0.686275, 1 )
rotation = 0.767945
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 10 )
offset = Vector2( -10, 10 )

[node name="Target" type="Node2D" parent="Reel"]

[node name="Target" type="Sprite" parent="Reel/Target"]
modulate = Color( 0.121569, 1, 0.690196, 1 )
rotation = 5.24646
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="OtherWheel" type="Sprite" parent="Reel"]
position = Vector2( 177, -127 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )
